@@ -38,6 +38,9 @@ RELEASE NOTES
     reexport/2 module directive, converting the module file name into the
     module name.
 
+    Updated the SWI-Prolog config file with more robust and fast code for
+    preprocessing module directives when the modules are already loaded.
+
     Added support for parsing use_module/3 directives to the SICStus Prolog
     config files. Improved finding the module name from the module file name
     when preprocessing the directives use_module/1-2.
